Basic array tests working

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "z",
   "version": "0.0.1",
   "description": "",
-  "main": "z.js",
+  "main": "z.mjs",
   "scripts": {
     "test": "mocha"
   },
