Add alea dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/webaverse/z#readme",
   "dependencies": {
+    "alea": "^1.0.1",
     "mocha": "^9.1.3"
   }
 }
